--- a/package.json
+++ b/package.json
@@ -16,38 +16,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.4.0",
-    "@angular/common": "^13.4.0",
-    "@angular/compiler": "^13.4.0",
-    "@angular/core": "^13.4.0",
-    "@angular/forms": "^13.4.0",
-    "@angular/platform-browser": "^13.4.0",
-    "@angular/platform-browser-dynamic": "^13.4.0",
-    "@angular/router": "^13.4.0",
+    "@angular/animations": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
     "@cruglobal/godtools-shared": "1.0.1",
     "@rails/actioncable": "^7.0.0",
-    "core-js": "^2.5.4",
+    "core-js": "^3.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "lottie-web": "5.12.2",
-    "ngx-lottie": "8.3.0",
-    "ngx-toastr": "13.2.1",
+    "ngx-lottie": "^8.3.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "^6.6.7",
     "ts-clipboard": "^1.0.17",
-    "tslib": "^2.0.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular-devkit/build-angular": "^17.3.11",
     "@angular-eslint/builder": "16.1.0",
     "@angular-eslint/eslint-plugin": "16.1.0",
     "@angular-eslint/eslint-plugin-template": "16.1.0",
     "@angular-eslint/schematics": "16.1.0",
     "@angular-eslint/template-parser": "16.1.0",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "^13.4.0",
-    "@angular/language-service": "^13.4.0",
+    "@angular/cli": "^17.3.11",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/language-service": "^17.3.12",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^18.0.0",
@@ -70,6 +70,6 @@
     "stream": "^0.0.2",
     "timers": "^0.1.1",
     "ts-node": "~9.1.1",
-    "typescript": "4.6.4"
+    "typescript": "^5.2.2"
   }
 }
