--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "prettier": "^3.0.0",
     "pretty-quick": "^3.1.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "stream": "^0.0.2",
     "timers": "^0.1.1",
     "ts-node": "~9.1.1",
